# risco_de_credito2

./: .gitignore  README.md  pyproject.toml
data/raw/: base_de_dados_Inadimplencia.xlsx
models/: linearSVC.pkl
notebooks/: SWEETVIZ_REPORT.html  analise_dados.py  case_risco_de_credito.ipynb
